# arbitrage_detector

./: CMakeLists.txt  README.md
src/: CMakeCache.txt  Makefile  arbitrage  cmake_install.cmake  main.cpp
src/detector/: arbitrage_detector.cpp  arbitrage_detector.h
src/fetcher/: binance_fetcher.cpp  bitstamp_fetcher.cpp  coinbase_fetcher.cpp  fetcher.h  uniswap_fetcher.cpp
src/orderbook/: orderbook.cpp  orderbook.h
src/shared/: config.h  logging.h  types.h
